--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,8 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.home-text {
+    padding: 12px;
+}
+
+.neils-image {
+  height: 60vmin;
   pointer-events: none;
     padding-bottom: 16px;
 }
@@ -21,4 +25,19 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.calculator-link {
+    background-color: white;
+    text-decoration: none;
+    padding: 4px 12px;
+    margin: 16px;
+    font-size: calc(10px + 1.25vmin);
+    border-radius: 4px;
+    color: #282c34;
+}
+
+.calculator-link:visited {
+    text-decoration: none;
+    color: #282c34;
 }
