--- a/src/components/weight-calculator/WeightCalculator.css
+++ b/src/components/weight-calculator/WeightCalculator.css
@@ -43,6 +43,24 @@ span {
     font-size: calc(10px + 1.5vmin);
 }
 
+.weights-container table {
+    border-collapse: collapse;
+}
+
+.weights-container thead {
+    font-weight: bold;
+}
+
+.weights-container td {
+    border: 1px solid white;
+    padding: 8px 16px;
+
+}
+
+.right-align {
+    text-align: right;
+}
+
 .asterisk {
     padding: 8px;
     font-size: 8pt;
